Revision history for {{$dist->name}}

{{$NEXT}}

1.112     2015-11-22 16:35:19-05:00 America/New_York
        - provide slightly better errors when articles are missing required
          headers

1.111     2014-02-18 07:50:05-05:00 America/New_York
        - add --year-links to add links to prev/next years' calendars
          (thanks, Len Jaffe!)

1.110     2013-12-19 22:34:26-0500 America/New_York
          fix encoding problem introduced by bugfix in Mixin::Linewise

1.109     2013-10-21 22:19:50 America/New_York
          update bugtracker and repo metadata

1.108     2011-12-27 17:53:09 America/New_York
          do not consider days "missing" unless they're in the calendar period

1.107     2011-12-21 08:00:23 America/New_York
          make "credit.mhtml" its own template

1.106     2011-12-19 16:45:30 America/New_York
          call article authors "authors" in the Atom, not "contributors"

          use a strict, optimized %color hash for the color palette

1.105     2011-12-07 08:54:55 America/New_York
          only put the author's name in the feed, not email address

          include an HTML comment with the generating version in output

          don't call our Atom feed an RSS feed

1.104     2011-11-30 17:39:06 America/New_York
          css_href config option allows extra CSS hrefs to be added to output

          author gravatars are now included by default

          minor tweaks to global CSS

1.103     2011-11-08 10:56:49 America/New_York
          added article author and calendar's default_author

1.102     2011-11-03 10:50:59 America/New_York
          an article's "package" is now called its "topic" -- this will break
          your advent calendar, if you exist and have written one

1.101     2011-11-02 14:03:13 America/New_York
          The style sheet is now a template, using Color::Palette for picking
          colors to use.  The default color palette was imported from the 2009