@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+        - removed support for Google Analytics tracker
 
 1.112     2015-11-22 16:35:19-05:00 America/New_York
         - provide slightly better errors when articles are missing required
